# oko

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Cargo.toml  README.md  make.sh  tarpaulin-report.html  test.sh
.cargo/: config.toml
.github/workflows/: gh_pages.yml  pr_tests.yml  release-binaries.yml  release-plz.yml
backend/: CHANGELOG.md  Cargo.toml  release-plz.toml  rustfmt.toml
backend/.cargo/: config.toml
backend/.sqlx/: query-012a48d5de1129678873c2dbdbceeeb65e891ea14923626e1861ccaffc984ed2.json  query-14eae4b1181365f22bf11ba4f5c2e27793999e5d21b443622628395d18189a50.json  query-1c5823784ebd997b832c5e8ac9d19f304311d29f985166c3c3c8b7d56570f2e1.json  query-293f7356e559c8ab9317c786287f14ae9a56caccf24d655ae9bbb82312150882.json  query-489a4e4d77042135207348fe7d4f020a562bd0dafe0147a566b031f49bd78121.json  query-4a3fc308ba1a4d8461479210a088714143a4c56ed187939fa3bb0f0bc7ce3ce0.json  query-4fe0e59278db1e7664d96b7355933f5a9ac9c10d143a44138bf8afaa70d7b654.json  query-56545409edd43f0cb5a88a2d32ec1eebc079813dde1b8ebe5194e4ea47684f9e.json  query-6a8dd08e9bd2f06760b9c78b353a622ae1e67fe35d561b818d7bdcd0e925a50d.json  query-707c7e588cf8c66380ef2cea937f11b3ea8279e73f5a2ca1af2fc70d8d81b081.json  query-729f5b639b7b1483c1d930759ef097ad87904506e3c5e3c5cd7127b4b22534f7.json  query-7c1b4499fd1aec87d8e93c50f3b5c47e2feac9ff1f852f98b9f9086e34b1f5b3.json  query-7e510c7cdbf738ee2db5f3425222bbb496caf7692a019547859907e9c471baa8.json  query-8b9c0ef2f170bf4592f6bee83e7d50f62cbfbd8ff0e0bbd6c506c680f6fa9ebb.json  query-98dc819b8e12ec8904996ec4e560a8f91f4e7cacf82f535876c6e55ec1118bf1.json  query-9dc03a1c6938d467dc4c69bdec4f6288ac6a93d873948619cf94c210ec9d21dd.json  query-a5d740822cfb12a5a2f1f5140410915ea5d3f93a08aaf6d235f7081b692f1fd7.json  query-a6ad5ce51aa4f4aa388ed79a54a6d134d0a8b44269c973a922eb15e13c17243c.json  query-a7f0a1849286c68e800221892268a882fe54187f4faaf45b81d0c2a604fc77b5.json  query-ab7d9685379f0b632dbde28d3bf98faebf17ca02fe8c57de0b78d8814baeede1.json  query-b9a2faf59ec4363997495c4186c59520065366d196e9f4d20b451f444e1c29fa.json  query-b9ef03d8a1a2475dfb3af53e75d603a8466480240a7deed6cd375197c0084b22.json  query-c21082224d4354ab739997bfaf5fbcfbde8b81b70a0149f88e4b1769832dde67.json  query-c22f8983a90b0b0cf0c8e9b3861fdf83ae390a6ec27af890fc7eb4bf3845319c.json  query-c4dccf310d73d1603e7e6fdaa06a8255faef7571880d03035e70a20a675e403d.json  query-c950f7e68aae5265dd1e026fac81af869727180d7289d057f6e64b764eb9f87d.json  query-ea834e74d72e7e40d3fceaabcefb1870f0dba27629de43c7b044cd84a66fe266.json  query-f91695149df3f5047a94a0882198af7c5b20d799621aa1847f264ee152e15010.json  query-fff5af664fa388e9def9093d2e8d8ab77ad9b125eebf58e7942d58b3a53af079.json
backend/fixtures/: camera_permissions.sql  camera_settings.sql  cameras.sql  users.sql  videos.sql
backend/src/: db.rs  lib.rs  users.rs  web.rs
backend/src/db/: camera.rs  camera_permission.rs  camera_permission_user_view.rs  camera_permission_view.rs  camera_setting.rs  user.rs  video.rs
backend/src/web/: app.rs  auth.rs  protected.rs
backend/tests/: app.rs  utils.rs  web.rs
backend/utils/camera-impersonator/: Cargo.toml
backend/utils/camera-impersonator/src/: main.rs
backend/utils/ws-utils/: Cargo.toml
backend/utils/ws-utils/src/: lib.rs
camera/: Cargo.toml  README.md  app_httpd.cpp  camera.ino  camera_index.h  espflash.toml  sdkconfig.defaults
camera/.cargo/: config.toml
camera/data/: index.html  setup.html
camera/src/: main.rs  setup.html
fixtures/: camera_settings.sql  cameras.sql  users.sql  videos.sql
frontend/: .gitignore  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest-setup.ts
frontend/src/: App.svelte  main.ts  types.ts
frontend/src/lib/: PWABadge.svelte
frontend/src/lib/components/: CameraAndVideos.svelte
frontend/src/lib/components/ui/badge/: index.ts
frontend/src/lib/components/ui/checkbox/: checkbox.svelte
frontend/src/lib/components/ui/input/: input.svelte
frontend/src/lib/components/ui/separator/: separator.svelte
frontend/src/lib/components/ui/sheet/: index.ts
frontend/src/lib/components/ui/switch/: switch.svelte
frontend/src/lib/components/ui/table/: table-cell.svelte  table-head.svelte
frontend/src/lib/components/ui/toggle/: index.ts
frontend/src/lib/components/ui/toggle-group/: toggle-group.svelte
frontend/src/lib/layouts/: DashboardLayout.svelte
frontend/src/lib/stores/: socketStore.ts  userStore.ts
frontend/src/routes/: Cameras.svelte  Login.svelte  Users.svelte
frontend/tests/: App.test.ts  Login.test.ts
landing/: index.html
migrations/: 20231108213118_init.sql
oko-rs/: Cargo.toml
oko-rs/camera-impersonator/: Cargo.toml
oko-rs/camera-impersonator/src/: main.rs
oko-rs/fixtures/: videos.sql
oko-rs/src/: lib.rs
oko-rs/src/db/: video.rs  video_camera_view.rs
oko-rs/src/web/: app.rs  protected.rs
oko-rs/tests/: utils.rs  web.rs
oko-rs/ws-utils/: Cargo.toml
scripts/: requirements.txt  test.sh  video2image.py
src/: db.rs  lib.rs  main.rs  sql.rs  users.rs  ws_utils.rs
src/db/: camera.rs  camera_permission.rs  camera_permission_view.rs  camera_setting.rs  user.rs  video.rs  video_camera_view.rs
src/db/fixtures/: camera_permissions.sql  camera_settings.sql  cameras.sql
src/web/: app.rs  auth.rs  protected.rs
templates/: login.html  protected.html
tests/: api.rs  db.rs  utils.rs  web.rs
web/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts  vitest-setup.ts
web/src/: App.svelte  types.ts
web/src/lib/: PWABadge.svelte  userStore.ts
web/src/lib/components/: CameraAndVideos.svelte
web/src/lib/components/ui/button/: button.svelte
web/src/lib/components/ui/input/: input.svelte
web/src/lib/components/ui/table/: table-footer.svelte
web/src/lib/layouts/: DashboardLayout.svelte
web/src/routes/: Cameras.svelte  Home.svelte  Login.svelte  NotFound.svelte
web/tests/: Login.test.ts
