[package]
name = "example-sqlite"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
async-trait = "0.1.74"
axum = { version = "0.7.5", features = ["ws"] }
axum-login = "0.16.0"
axum-messages = "0.7.0"
http = "1.0.0"
hyper = "1.0.1"
password-auth = "1.0.0"
serde = "1"
sqlx = { version = "0.8.1", features = ["sqlite", "time", "runtime-tokio"] }
time = "0.3.30"
tokio = { version = "1.34.0", features = ["full"] }
tokio-tungstenite = "0.24.0"
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
headers = "0.4"
tower = "0.4.13"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tower-sessions = { version = "0.13.0", default-features = false, features = [
    "signed",
] }
tower-sessions-sqlx-store = { version = "0.14.0", features = ["sqlite"] }
thiserror = "1.0.56"
