[package]
name = "oko-rs"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "oko"

[dependencies]
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
async-trait = "0.1.74"
axum = { version = "0.7.5", features = ["ws"] }
axum-login = "0.16.0"
axum-messages = "0.7.0"
http = "1.0.0"
hyper = "1.0.1"
password-auth = "1.0.0"
serde = "1"
sqlx = { version = "0.8.1", features = ["sqlite", "time", "runtime-tokio"] }
time = "0.3.30"
tokio = { version = "1.34.0", features = ["full"] }
tokio-tungstenite = "0.24.0"
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
headers = "0.4"
tower = "0.4.13"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tower-sessions = { version = "0.13.0", default-features = false, features = [
    "signed",
] }
tower-sessions-sqlx-store = { version = "0.14.0", features = ["sqlite"] }
thiserror = "1.0.56"
serde_json = "1.0.132"
chrono = { version = "0.4.38", features = ["serde"] }
tracing = "0.1.40"

[lints.rust]
unsafe_code = "forbid"
unused_imports = "deny"
unused_variables = "deny"
unused_must_use = "deny"
dead_code = "warn"
missing_docs = "allow"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
redundant_pub_crate = "warn"
unwrap_used = "warn"
expect_used = "warn"
panic = "deny"
unreachable = "deny"
todo = "deny"
unimplemented = "deny"
await_holding_lock = "deny"
indexing_slicing = "deny"
float_cmp = "deny"
modulo_one = "deny"
missing_errors_doc = "allow"
